--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -6,10 +6,6 @@
   margin: -1px;
 }
 
-.page {
-  height: 100%;
-}
-
 img {
   max-width: 100%;
   height: auto;
@@ -17,4 +13,23 @@ img {
 
 a {
   text-decoration: none;
+  display: inline-block;
+  box-sizing: border-box;
+}
+
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 1170px;
+  padding: 0 40px;
+
+  @media(max-width:$tablet-max) {
+    padding: 0;
+  }
 }
