--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,4 +1,9 @@
 @import "fonts.scss";
-@import "global.scss";
 @import "fonts.scss";
 @import "varitables.scss";
+@import "global.scss";
+
+// block
+@import "block/page.scss";
+@import "block/header.scss";
+@import "block/main-nav.scss";
