--- a/source/sass/varitables.scss
+++ b/source/sass/varitables.scss
@@ -3,6 +3,7 @@ $orange:#F17D4B;
 $dark:#141517;
 $dark-blue:#2C2E3F;
 $white:#FFFFFF;
+$light:#FBF8F8;
 $light-dark:rgba(44, 46, 63, 0.7);
 $gray:#D7D9DF;
 $font-montserrat:"Montserrat","Arial", sans-serif;
@@ -12,3 +13,4 @@ $tablet:768px;
 $tablet-max:1023px;
 $desktop-min:1024px;
 $desktop-max:1280px;
+$menu-tab:#48494D;
