--- a/source/sass/block/header.scss
+++ b/source/sass/block/header.scss
@@ -18,6 +18,12 @@
 
   @media(max-width:$tablet-max) {
     padding-left: 20px;
+    width: 44px;
+    height: 17px;
+  }
+
+  @media(max-width:$mobile-max) {
+    padding-left: 16px;
   }
 }
 
