--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,3 +7,6 @@
 @import "block/page.scss";
 @import "block/header.scss";
 @import "block/main-nav.scss";
+@import "block/footer-trips.scss";
+@import "block/footer-contact.scss";
+@import "block/footer-offer.scss";
