--- a/source/sass/varitables.scss
+++ b/source/sass/varitables.scss
@@ -14,3 +14,5 @@ $tablet-max:1023px;
 $desktop-min:1024px;
 $desktop-max:1280px;
 $menu-tab:#48494D;
+$footer-color:rgba(20, 21, 23, 0.5);
+$footer-svg:#D7D9DF;
