Рефакторинг контактов в подвале

--- a/source/sass/block/footer-trips.scss
+++ b/source/sass/block/footer-trips.scss
@@ -52,7 +52,7 @@
   row-gap: 20px;
 
   @media(max-width:$tablet-max) {
-    grid-template-columns: 34% 34% 32%;
+    grid-template-columns: 34% 35% 33%;;
   }
 
   @media(max-width:$mobile-max) {
