--- a/source/sass/block/footer-contact.scss
+++ b/source/sass/block/footer-contact.scss
@@ -19,47 +19,57 @@
   font-weight: 600;
   color: $dark;
   margin-top: 0;
-  margin-bottom: 25px;
+  margin-bottom: 20px;
 }
 
 .footer-contact__item {
-  display: flex;
-  align-items: center;
-
   &:not(:last-of-type) {
-    margin-bottom: 21px;
+    margin-bottom: 17px;
   }
-
-  @media(max-width:$mobile-max) {
-    justify-content: center;
-  }
-}
-
-.footer-contact--email {
-  @media(max-width:$mobile-max) {
-    margin-left: 10px;
-  }
-}
-
-.footer-contact__icon--tel {
-  stroke: $footer-svg;
-  width: 30px;
-  height: 24px;
-  padding-bottom: 8px;
 }
 
 .footer-contact__link {
   font-size: 14px;
   line-height: 17px;
   color: $tomato;
-  display: flex;
-  align-items: center;
   text-decoration: underline;
-  margin-left: 15px;
+  position: relative;
+  padding-top: 2px;
+
+  &::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+  }
+
+  &--email {
+    padding-left: 40px;
+
+    &::before {
+      width: 26px;
+      height: 20px;
+      background: url("../img/icon-email.svg") no-repeat center;
+    }
+
+    @media(max-width:$tablet-max) {
+      text-decoration: none;
+    }
+
+    @media(max-width:$mobile-max) {
+      margin-left: 10px;
+    }
+  }
 
   &--tel {
     font-size: 16px;
     line-height: 32px;
-    margin-left: 11px;
+    padding-left: 42px;
+
+    &::before {
+      width: 30px;
+      height: 30px;
+      background: url("../img/phone.svg") no-repeat center;
+    }
   }
 }
