--- a/source/sass/block/footer-trips.scss
+++ b/source/sass/block/footer-trips.scss
@@ -56,23 +56,18 @@
   }
 
   @media(max-width:$mobile-max) {
-    // grid-template-columns: 1fr 1fr;
-    // grid-column-gap: 20px;
-    // grid-row-gap: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    column-gap: 9%;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 20px;
+    grid-row-gap: 22px;
+
   }
 }
 
 .footer-trips__list {
   @media(max-width:$mobile-max) {
-    // &:nth-child(3) {
-    //   grid-column: 1/-1;
-    // }
-    width: 45%;
+    &:nth-child(3) {
+      grid-column: 1/-1;
+    }
   }
 }
 
