--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,9 +6,11 @@
 // block
 @import "block/page.scss";
 @import "block/button.scss";
+@import "block/title.scss";
 @import "block/header.scss";
 @import "block/main-nav.scss";
 @import "block/footer-trips.scss";
 @import "block/footer-contact.scss";
 @import "block/footer-offer.scss";
 @import "block/promo.scss";
+@import "block/catalog.scss";
