--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,3 +14,6 @@
 @import "block/footer-offer.scss";
 @import "block/promo.scss";
 @import "block/catalog.scss";
+@import "block/places.scss";
+@import "block/description.scss";
+@import "block/review.scss";
