--- a/source/sass/block/footer-contact.scss
+++ b/source/sass/block/footer-contact.scss
@@ -69,7 +69,7 @@
     &::before {
       width: 30px;
       height: 30px;
-      background: url("../img/phone.svg") no-repeat center;
+      background: url("../img/phone-gray.svg") no-repeat center;
     }
   }
 }
