--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -17,3 +17,5 @@
 @import "block/places.scss";
 @import "block/description.scss";
 @import "block/review.scss";
+@import "block/price.scss";
+@import "block/tariff.scss";
