--- a/source/sass/varitables.scss
+++ b/source/sass/varitables.scss
@@ -2,6 +2,7 @@ $tomato:#FE7865;
 $orange:#F17D4B;
 $dark:#141517;
 $dark-blue:#2C2E3F;
+$black:#000000;
 $white:#FFFFFF;
 $light:#FBF8F8;
 $light-dark:rgba(44, 46, 63, 0.7);
