--- a/source/sass/block/promo.scss
+++ b/source/sass/block/promo.scss
@@ -41,11 +41,11 @@
   margin: 0;
 
   @media(max-width:$tablet-max) {
+    padding: 0;
     padding-top: 60px;
     width: 398px;
     grid-column: 1/-1;
     margin: 0 auto;
-    padding-left: 0;
     text-align: center;
     box-sizing: border-box;
   }
@@ -53,7 +53,6 @@
   @media(max-width:$mobile-max) {
     padding-top: 0;
     width: 100%;
-    padding-left: 16px;
   }
 }
 
@@ -69,7 +68,7 @@
   }
 
   @media(max-width:$mobile-max) {
-    margin: 0 -16px 20px;
+    margin-bottom: 20px;
     padding-top: 81px;
     padding-bottom: 82px;
     padding-left: 22px;
@@ -100,6 +99,7 @@
   @media(max-width:$mobile-max) {
     color: $dark-blue;
     margin-bottom: 20px;
+    padding: 0 16px;
   }
 }
 
