--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -31,7 +31,7 @@ ol {
   padding: 0 40px;
 
   @media(max-width:$tablet-max) {
-    padding: 0;
+    padding: 0 21px;
   }
 
   @media(max-width:$mobile-max) {
