--- a/source/sass/block/footer-contact.scss
+++ b/source/sass/block/footer-contact.scss
@@ -9,7 +9,7 @@
   @media(max-width:$mobile-max) {
     text-align: center;
     padding-left: 0;
-    margin-bottom: 26px;
+    margin-bottom: 23px;
   }
 }
 
@@ -25,6 +25,10 @@
 .footer-contact__item {
   &:not(:last-of-type) {
     margin-bottom: 17px;
+
+    @media(max-width:$mobile-max) {
+      margin-bottom: 20px;
+    }
   }
 }
 
