--- a/source/sass/block/page.scss
+++ b/source/sass/block/page.scss
@@ -16,22 +16,24 @@
   text-align: left;
   display: grid;
   grid-template-columns: repeat(3,1fr);
-  padding-bottom: 74px;
-  max-width: 1160px;
+  padding-bottom: 34px;
   box-sizing: border-box;
+  padding: 0;
+  padding-right: 10px;
 
   @media(max-width:$tablet-max) {
     grid-template-columns: repeat(2,1fr);
-    padding-bottom: 54px;
+    padding-bottom: 41px;
     padding-left: 21px;
     padding-right: 21px;
     max-width: 100%;
+    padding-right: 0;
   }
 
   @media(max-width:$mobile-max) {
     text-align: center;
     grid-template-columns: 1fr;
-    padding-bottom: 26px;
+    padding-bottom: 16px;
     padding-left: 16px;
     padding-right: 16px;
   }
