--- a/source/sass/block/price.scss
+++ b/source/sass/block/price.scss
@@ -2,11 +2,17 @@
   display: grid;
   grid-template-columns: 1fr 306px;
   gap: 8%;
+  margin-bottom: 109px;
 
   @media(max-width:$tablet-max) {
     grid-template-columns: 1fr;
     gap: 0;
     justify-items: center;
+    margin-bottom: 80px;
+  }
+
+  @media(max-width:$mobile-max) {
+    margin-bottom: 18px;
   }
 }
 
@@ -26,6 +32,7 @@
 .prices__title {
   margin: 0;
   margin-bottom: 30px;
+  letter-spacing: 0;
 
   @media(min-width:$desktop-min) {
     padding-bottom: 22px;
