--- a/source/sass/block/tariff.scss
+++ b/source/sass/block/tariff.scss
@@ -34,6 +34,7 @@
   background-color: $white;
   border: 1px solid rgba(44, 46, 63, 0.3);
   border-radius: 6px;
+  margin-left: -2px;
 
   &:hover,
   &:focus-within {
@@ -58,6 +59,7 @@
   }
 
   @media(max-width:$tablet-max) {
+    margin-left: 0;
     padding: 28px 20px 0;
     min-height: 629px;
     border-bottom-left-radius: 0;
@@ -66,7 +68,8 @@
 
   @media(max-width:$mobile-max) {
     padding: 26px 20px 0;
-    min-height: 629px;
+    min-height: 627px;
+    margin-bottom: 32px;
   }
 }
 
@@ -179,5 +182,6 @@
   @media(max-width:$tablet-max) {
     width: 288px;
     margin: 0 -21px;
+    padding: 19px 66px 17px 70px;
   }
 }
