--- a/source/sass/block/feedback.scss
+++ b/source/sass/block/feedback.scss
@@ -26,6 +26,10 @@
     background-color: $light;
     min-height: auto;
     margin-bottom: 60px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: none;
+    }
   }
 }
 
