--- a/source/sass/block/feedback.scss
+++ b/source/sass/block/feedback.scss
@@ -6,7 +6,7 @@
   justify-content: flex-end;
   align-items: center;
 
-  @media(min-width:$tablet) {
+  @media (min-width: $tablet) {
     background-image: url("../img/background/form-bg.jpg");
 
     @media (min-resolution: 2dppx) {
@@ -18,13 +18,13 @@
   background-position: left center;
   background-size: 844px 100%;
 
-  @media(max-width:$tablet-max) {
+  @media (max-width: $tablet-max) {
     justify-content: center;
     background-size: cover;
     margin-bottom: 80px;
   }
 
-  @media(max-width:$mobile-max) {
+  @media (max-width: $mobile-max) {
     background-color: $light;
     min-height: auto;
     margin-bottom: 60px;
@@ -38,17 +38,17 @@
   background-color: $white;
   text-align: center;
   color: $dark;
-  box-shadow: 0px 4px 30px rgba(41, 54, 66, 0.1);
+  box-shadow: 0 4px 30px rgba(41, 54, 66, 0.1);
   border-radius: 5px;
   min-height: 315px;
   max-width: 655px;
   width: 100%;
 
-  @media(max-width:$tablet-max) {
+  @media (max-width: $tablet-max) {
     margin-right: 0;
   }
 
-  @media(max-width:$mobile-max) {
+  @media (max-width: $mobile-max) {
     padding-left: 0;
     padding-right: 0;
     background-color: transparent;
@@ -64,7 +64,7 @@
   line-height: 32px;
   margin-bottom: 12px;
 
-  @media(max-width:$mobile-max) {
+  @media (max-width: $mobile-max) {
     margin-bottom: 20px;
   }
 }
@@ -74,7 +74,7 @@
   margin: 0;
   margin-bottom: 24px;
 
-  @media(max-width:$mobile-max) {
+  @media (max-width: $mobile-max) {
     margin-bottom: 19px;
   }
 }
@@ -85,11 +85,11 @@
   gap: 20px;
   margin-bottom: 25px;
 
-  @media(max-width:$tablet-max) {
+  @media (max-width: $tablet-max) {
     margin-bottom: 20px;
   }
 
-  @media(max-width:$mobile-max) {
+  @media (max-width: $mobile-max) {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
   }
@@ -138,7 +138,7 @@
     outline-color: $tomato;
   }
 
-  &:focus:invalid+.feedback__invalid {
+  &:focus:invalid + .feedback__invalid {
     visibility: visible;
   }
 }
@@ -160,11 +160,11 @@
   max-width: 176px;
   width: 100%;
 
-  @media(max-width:$tablet-max) {
+  @media (max-width: $tablet-max) {
     max-width: 250px;
   }
 
-  @media(max-width:$mobile-max) {
+  @media (max-width: $mobile-max) {
     max-width: 288px;
     padding: 19px 31px 19px 36px;
   }
