--- a/source/sass/block/header.scss
+++ b/source/sass/block/header.scss
@@ -6,7 +6,7 @@
   padding-top: 25px;
   padding-bottom: 26px;
 
-  @media(max-width:$tablet-max) {
+  @media (max-width: $tablet-max) {
     box-sizing: border-box;
     padding: 0;
     padding-top: 17px;
@@ -14,7 +14,7 @@
     flex-direction: column;
   }
 
-  @media(max-width:$mobile-max) {
+  @media (max-width: $mobile-max) {
     padding: 17px 0 0;
   }
 }
@@ -22,13 +22,13 @@
 .header__logo {
   margin-right: auto;
 
-  @media(max-width:$tablet-max) {
+  @media (max-width: $tablet-max) {
     padding-left: 20px;
     width: 44px;
     height: 17px;
   }
 
-  @media(max-width:$mobile-max) {
+  @media (max-width: $mobile-max) {
     padding-left: 16px;
   }
 }
@@ -40,9 +40,9 @@
   text-decoration: underline;
   font-size: 18px;
   line-height: 32px;
-  padding: 5px 5px 0px 5px;
+  padding: 5px 5px 0 5px;
 
-  @media(max-width:$tablet-max) {
+  @media (max-width: $tablet-max) {
     display: none;
   }
 
