--- a/source/sass/block/tariff.scss
+++ b/source/sass/block/tariff.scss
@@ -6,7 +6,7 @@
   grid-template-columns: repeat(2, 1fr);
   column-gap: 4%;
 
-  @media(max-width:$tablet-max) {
+  @media (max-width: $tablet-max) {
     column-gap: 8.5%;
     grid-row: 2;
     grid-column: 1/-1;
@@ -16,7 +16,7 @@
     margin-left: -50px;
   }
 
-  @media(max-width:$mobile-max) {
+  @media (max-width: $mobile-max) {
     column-gap: 0;
     grid-template-columns: 288px;
     margin-left: 0;
@@ -58,7 +58,7 @@
     }
   }
 
-  @media(max-width:$tablet-max) {
+  @media (max-width: $tablet-max) {
     margin-left: 0;
     padding: 28px 20px 0;
     min-height: 629px;
@@ -66,7 +66,7 @@
     border-bottom-right-radius: 0;
   }
 
-  @media(max-width:$mobile-max) {
+  @media (max-width: $mobile-max) {
     padding: 26px 20px 0;
     min-height: 627px;
     margin-bottom: 32px;
@@ -77,12 +77,12 @@
   .tariff__description-item:first-child {
     margin-bottom: 7px;
 
-    @media(max-width:$tablet-max) {
+    @media (max-width: $tablet-max) {
       margin-bottom: 5px;
     }
   }
 
-  @media(max-width:$tablet-max) {
+  @media (max-width: $tablet-max) {
     .tariff__rate {
       margin-right: 0;
     }
@@ -93,7 +93,7 @@
   border-bottom: 1px solid rgba(44, 46, 63, 0.3);
   margin-bottom: 31px;
 
-  @media(max-width:$tablet-max) {
+  @media (max-width: $tablet-max) {
     margin-bottom: 22px;
     text-align: center;
   }
@@ -107,9 +107,9 @@
   color: rgba(20, 21, 23, 0.7);
   margin-bottom: 26px;
 
-  @media(max-width:$tablet-max) {
+  @media (max-width: $tablet-max) {
     justify-content: center;
-    margin: 0 20px
+    margin: 0 20px;
   }
 }
 
@@ -121,7 +121,7 @@
   letter-spacing: -1.28px;
   margin-bottom: 10px;
 
-  @media(max-width:$tablet-max) {
+  @media (max-width: $tablet-max) {
     font-size: 24px;
     margin-bottom: 7px;
   }
@@ -133,7 +133,7 @@
   line-height: 34px;
   margin-bottom: 10px;
 
-  @media(max-width:$tablet-max) {
+  @media (max-width: $tablet-max) {
     margin-bottom: 12px;
     margin-right: 10px;
   }
@@ -146,7 +146,7 @@
   color: $dark-blue;
   margin-right: 20px;
 
-  @media(max-width:$tablet-max) {
+  @media (max-width: $tablet-max) {
     margin-right: 0;
     margin-bottom: 8px;
   }
@@ -158,7 +158,7 @@
   grid-template-columns: min-content 1fr;
   align-items: baseline;
 
-  @media(max-width:$tablet-max) {
+  @media (max-width: $tablet-max) {
     margin-bottom: 10px;
   }
 }
@@ -179,7 +179,7 @@
 .tariff__btn {
   max-width: 310px;
 
-  @media(max-width:$tablet-max) {
+  @media (max-width: $tablet-max) {
     width: 288px;
     margin: 0 -21px;
     padding: 19px 66px 17px 70px;
