--- a/source/sass/block/modal.scss
+++ b/source/sass/block/modal.scss
@@ -1,4 +1,5 @@
 .modal {
+  display: none;
   box-sizing: border-box;
   animation: bounce 0.6s;
   position: fixed;
@@ -9,8 +10,11 @@
   z-index: 1000;
 }
 
-.modal--success {
+.modal--show {
   display: flex;
+}
+
+.modal--success {
   align-items: center;
   justify-content: center;
   width: 728px;
@@ -45,7 +49,6 @@
 }
 
 .modal--buy {
-  display: flex;
   justify-content: flex-end;
   width: 728px;
   min-height: 444px;
