--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,6 +1,7 @@
 @import "fonts.scss";
-@import "varitables.scss";
+@import "variables.scss";
 @import "global.scss";
+@import "animation.scss";
 
 // block
 @import "block/page.scss";
